[package]
name = "migren"
version = "0.1.0"
edition = "2024"
authors = ["Sarygin Rodion"]
description = "Small migration tool for relational databases."

[dependencies]
clap = { version = "4.5.42", features = ["derive", "string"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
envy = "0.4.2"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
