[package]
name = "migren"
version = "0.1.0"
edition = "2024"
authors = ["Sarygin Rodion"]
description = "Small migration tool for relational databases."
keywords = ["sql", "db", "database", "migrations", "migren"]
categories = ["database", "command-line-utilities"]
license_file = "LICENSE"
repository = "https://github.com/saryginrodion/migren"

[dependencies]
clap = { version = "4.5.42", features = ["derive", "string"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
envy = "0.4.2"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "all-databases", "any"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
